Fix TOC display on Firefox
Change DOM so DOC display is more robust across browsers. Re-align dotted line. Slightly increase width of panels. Remove redundant viewer styles.

--- a/app/Resources/scss/sections/_export.scss
+++ b/app/Resources/scss/sections/_export.scss
@@ -1,5 +1,4 @@
 .export {
-    min-width: 20em;
     padding: ($grid / 2);
 }
 
