--- a/app/Resources/scss/sections/_metadata.scss
+++ b/app/Resources/scss/sections/_metadata.scss
@@ -1,5 +1,4 @@
 .metadata {
-    min-width: 20em;
     overflow-y: auto;
     padding: ($grid / 2);
 
